[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/berd/jump/berd_sky.png" type="Texture" id=1]
[ext_resource path="res://textures/berd/jump/berd_sky2.png" type="Texture" id=2]
[ext_resource path="res://textures/berd/run/berd_run-2.png" type="Texture" id=3]
[ext_resource path="res://textures/berd/dash/berd_dash-2.png" type="Texture" id=4]
[ext_resource path="res://textures/berd/run/berd_run-1.png" type="Texture" id=5]
[ext_resource path="res://Berd.gd" type="Script" id=6]
[ext_resource path="res://textures/berd/idle/berd_idle.png" type="Texture" id=7]
[ext_resource path="res://textures/berd/dash/berd_dash-1.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "sky",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "sky2",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 6.0

[node name="Berd" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "sky2"

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="Dash" type="Timer" parent="KinematicBody2D"]
wait_time = 0.3
one_shot = true

[node name="DashCD" type="Timer" parent="KinematicBody2D"]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="KinematicBody2D/Dash" to="KinematicBody2D" method="_on_Dash_timeout"]
[connection signal="timeout" from="KinematicBody2D/DashCD" to="KinematicBody2D" method="_on_DashCD_timeout"]
